--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,41 @@
 
 
 .heroSection{
-  background-image:  url('./pages/images/herofilm.jpg');
+  background-image: url("../public/images/herofilm.jpg");
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-
+.heroSection::before{
+    content: "";
+    background: rgb(0, 0, 0,0.5);
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: 1;
+}
+.heroSection >*{
+    position: relative;
+    z-index: 2;
+}
 .heroSection h1{
 font-family: "Inria Serif", serif;
   font-weight: 700;
   color: white;
   font-size: 80px;
+  margin-bottom: 0;
 }
 
 .red {
-  color: red;
+  color:#d7263d;
 }
 
 .heroSection p{
-font-family: "Inria Serif", serif;
-  font-weight: 500;
-  color: rgb(255, 0, 0);
-  font-size: 32px;
+  font-family: "Poppins";
+  font-weight: 400;
+  color: #d7263d;
+  font-size: 30px;
+  text-shadow: 0 6px 6px  #020202;
 }
