--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
 
 .heroSection{
   background-image: url("../public/images/herofilm.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   height: 100vh;
   display: flex;
   justify-content: center;
