--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,53 @@
   font-size: 30px;
   text-shadow: 0 6px 6px  #020202;
 }
+
+/* .top10Section img{
+  width: 200px;
+  height: 300px;
+} */
+
+.top10Section {
+  /* padding: 20px; */
+  margin-left: 20px;
+  /* background-color: #f9f9f9; */
+}
+
+.top10Section h2 {
+  margin-bottom: 20px;
+}
+
+.cardsContainer {
+  display: flex;          /* utiliser flex pour le scroll horizontal */
+  gap: 100px;
+  overflow-x: hidden;       /* scroll horizontal */
+  scroll-behavior: smooth;
+  padding-bottom: 10px;   /* espace pour le scroll */
+  
+
+}
+
+.movieCard {
+  /* flex: 0 0 calc(33.33% - 20px); largeur de chaque card : 1/3 - gap */
+
+  background-color: #0197F6;
+  /* border-radius: 10px; */
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  text-align: center;
+}
+
+.movieCard img {
+  width: 240px;
+  height: 272px;
+  /* object-fit: cover; */
+  /* border-top-left-radius: 10px;
+  border-top-right-radius: 10px; */
+}
+
+.movieCard h1 {
+  margin: 0px;
+  padding: 9px;
+  font-size: 20px;
+  font-weight: 400;
+  color: #ffffff;
+}
