--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 
 
 .heroSection{
+
   background-image: url("../public/images/herofilm.jpg");
   background-size: cover;
   background-position: center;
@@ -60,7 +61,7 @@
 .cardsContainer {
   display: flex;          /* utiliser flex pour le scroll horizontal */
   gap: 100px;
-  overflow-x: hidden;       /* scroll horizontal */
+  overflow-x: auto;       /* scroll horizontal */
   scroll-behavior: smooth;
   padding-bottom: 10px;   /* espace pour le scroll */
   
@@ -90,4 +91,37 @@
   font-size: 20px;
   font-weight: 400;
   color: #ffffff;
+}
+
+.containerDetails{
+  padding-top: 50px;
+  height: 100vh;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.containerDetails::before{
+    content: "";
+    background: rgb(0, 0, 0,0.5);
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: 1;
+}
+.containerDetails >*{
+    position: relative;
+    z-index: 2;
+}
+
+.details{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  /* border: 5px solid red; */
+  margin: 0px 0px 0px 50px;
+}
+.details p {
+  font-size: 29px;
 }
