--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100vh;
   /* display: flex; */
   /* place-items: center;
   min-width: 320px;
@@ -26,10 +27,30 @@ height: 50px;
 width: 45px;
 height: 45px;  
 }
-footer{
-display: flex;
-flex-direction: column;
-align-items: center;
+.footer{
+bottom:0;
+}
+footer {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 80px;
+}
+
+footer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(
+    90deg,
+    #0197F6 0%, 
+    #02182B 50%, 
+    #d7263d 100%
+  );
 }
 .footerElement{
   display: flex;
@@ -82,4 +103,92 @@ align-items: center;
   width: 100%;
   background-color: #0197F6;
   text-align: center;
+}
+.contact{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 50px;
+  text-align: center;
+  background-color: #02182B;
+}
+.contact h1{
+  color: #d7263d;
+}
+.contact form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  border: 4px solid transparent;
+  box-shadow: 0px 10px 20px 4px #D7263D;
+  border-radius: 10px;
+  width: 400px;
+  height: auto;
+  padding: 30px;
+}
+.contact h2{
+  display: inline-block;
+  width: fit-content; 
+  margin: 0 auto; 
+  background-image: linear-gradient(130deg, #0197F6, #FFFFFF, #d7263d);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.contact label{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 25px;
+}
+.contact input{
+  width: 100%;
+  height: 40px;
+  border: none;
+  outline: none;
+  color: white;
+  border-radius: 10px;
+  background:
+    linear-gradient(#02182B, #02182B) padding-box,
+    linear-gradient(
+      90deg,
+      #0197F6,
+      #02182B,
+      #d7263d
+    ) border-box;
+  border: 2px solid transparent;
+}
+
+.contact textarea{
+  width: 100%;
+  height: 100px;
+  background-color: transparent;
+  color: white;
+  outline: none;
+  border-radius: 10px;
+  background:
+    linear-gradient(#02182B, #02182B) padding-box,
+    linear-gradient(
+      90deg,
+      #0197F6,
+      #02182B,
+      #d7263d
+    ) border-box;
+  border: 2px solid transparent;
+}
+form button{
+  align-items: center;
+  width: 100px;
+  height: 30px;
+  margin-top: 40px;
+  background: linear-gradient(
+    90deg,
+    #0197F6 0%, 
+    #02182B 50%, 
+    #d7263d 100% 
+  );
+  color: white;
+  border: none;
+  border-radius:10px ;
 }
