--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@
 }
 
 .containerDetails{
+  position: relative;
   padding-top: 50px;
   height: 100vh;
   width: 100%;
@@ -101,27 +102,78 @@
   background-size: cover;
 }
 
+/* Overlay sombre */
 .containerDetails::before{
     content: "";
-    background: rgb(0, 0, 0,0.5);
+    background: rgba(0, 0, 0, 0.7);
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: absolute;
-    z-index: 1;
-}
-.containerDetails >*{
-    position: relative;
-    z-index: 2;
+    /* z-index: 1; */
 }
 
+/* Quand on affiche la vidéo, on cache l’overlay */
+.containerDetails.noOverlay::before {
+    display: none;
+}
+
+.containerDetails >*{
+    position: relative;
+    /* z-index: 2; */
+}
+
+/* Détails film */
 .details{
   height: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  /* border: 5px solid red; */
-  margin: 0px 0px 0px 50px;
+  margin-left: 50px;
 }
 .details p {
   font-size: 29px;
+}
+
+/* Bouton Play */
+.playButton {
+  position: absolute;
+  left: 77%;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 20px 30px;
+  font-size: 28px;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  background-color: rgba(255, 0, 0, 0.8);
+  color: white;
+  transition: 0.3s;
+  z-index: 2;
+}
+.playButton:hover {
+  background-color: rgba(255, 0, 0, 1);
+}
+
+/* Overlay vidéo */
+.videoOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Conteneur vidéo */
+.videoContainer {
+  background: black;
+  padding: 10px;
+  border-radius: 10px;
+  z-index: 10000;
+  top: 50%;
+  left: 77%;
 }
