--- a/src/index.css
+++ b/src/index.css
@@ -192,3 +192,91 @@ form button{
   border: none;
   border-radius:10px ;
 }
+
+.popup-overlay {
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.75);
+display: flex;
+justify-content: center;
+align-items: center;
+z-index: 999;
+}
+
+
+.popup-container {
+background-color: #02182B;
+padding: 25px;
+border-radius: 15px;
+width: 350px;
+max-width: 90%;
+text-align: center;
+box-shadow: 0 0 15px rgba(0, 255, 255, 0.4);
+border: 2px solid #D7263D;
+position: relative;
+color: #D7263D;
+}
+
+.popup-close {
+position: absolute;
+top: 10px;
+right: 10px;
+background: transparent;
+border: none;
+font-size: 20px;
+color: #D7263D;
+cursor: pointer;
+}
+
+.popup-title {
+font-size: 26px;
+margin-bottom: 10px;
+font-weight: bold;
+color: #D7263D;
+}
+
+.popup-subtitle {
+font-size: 15px;
+margin-bottom: 15px;
+color: white;
+}
+
+.popup-input {
+width: 90%;
+padding: 10px;
+border: none;
+outline: none;
+color: white;
+border-radius: 10px;
+background:
+  linear-gradient(#02182B, #02182B) padding-box,
+  linear-gradient(
+    90deg,
+    #0197F6,
+    #02182B,
+    #d7263d
+  ) border-box;
+border: 2px solid transparent;
+margin-bottom: 10px;
+}
+
+.popup-btn {
+width: 100%;
+padding: 10px;
+background-color:#0197F6;
+border: none;
+border-radius: 6px;
+font-weight: bold;
+color: #02182B;
+font-size: 16px;
+cursor: pointer;
+}
+
+.popup-error {
+color: red;
+margin-bottom: 10px;
+font-size: 14px;
+}
