lajout des sections du page home

--- a/src/App.css
+++ b/src/App.css
@@ -137,15 +137,15 @@
 /* Bouton Play */
 .playButton {
   position: absolute;
-  left: 77%;
+  right: 10%;
   top: 50%;
   transform: translateY(-50%);
   padding: 20px 30px;
   font-size: 28px;
   border: none;
-  border-radius: 50px;
+  border-radius: 10px;
   cursor: pointer;
-  background-color: rgba(255, 0, 0, 0.8);
+  background-color:#d7263d;
   color: white;
   transition: 0.3s;
   z-index: 2;
@@ -175,5 +175,24 @@
   border-radius: 10px;
   z-index: 10000;
   top: 50%;
-  left: 77%;
+  left: 10%;
+}
+
+.backButton {
+  position: absolute;
+  top: 65px;
+  left: 10px;
+  font-size: 28px;
+  color: white;
+  background:#d7263d;
+  padding: 10px 18px;
+  border-radius: 10px;
+  text-decoration: none;
+  backdrop-filter: blur(3px);
+  z-index: 3;
+  transition: 0.3s;
+}
+
+.backButton:hover {
+  background: #f32c46;
 }
