--- a/src/App.css
+++ b/src/App.css
@@ -43,36 +43,30 @@
   text-shadow: 0 6px 6px  #020202;
 }
 
-/* .top10Section img{
-  width: 200px;
-  height: 300px;
-} */
 
 .top10Section {
-  /* padding: 20px; */
-  margin-left: 20px;
-  /* background-color: #f9f9f9; */
-}
+  margin: 0 20px;
+    display: flex;
+ flex-direction: column;
+ margin: 0 20px;
 
-.top10Section h2 {
-  margin-bottom: 20px;
 }
 
 .cardsContainer {
-  display: flex;          /* utiliser flex pour le scroll horizontal */
+  display: flex;       
   gap: 100px;
-  overflow-x: auto;       /* scroll horizontal */
+  overflow-x: auto;     
   scroll-behavior: smooth;
-  padding-bottom: 10px;   /* espace pour le scroll */
-  
-
+  padding-bottom: 10px; 
+}
+.cardsContainer::-webkit-scrollbar {
+  display: none; 
 }
 
 .movieCard {
-  /* flex: 0 0 calc(33.33% - 20px); largeur de chaque card : 1/3 - gap */
-
+  text-decoration: none !important;
   background-color: #0197F6;
-  /* border-radius: 10px; */
+  border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0,0,0,0.1);
   text-align: center;
 }
@@ -81,8 +75,12 @@
   width: 240px;
   height: 272px;
   /* object-fit: cover; */
-  /* border-top-left-radius: 10px;
-  border-top-right-radius: 10px; */
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.movieCard:hover {
+  transform: translateY(3px) scale(1.03);
+  box-shadow: 0 6px 12px rgba(255, 255, 255, 0.5);
 }
 
 .movieCard h1 {
@@ -91,6 +89,31 @@
   font-size: 20px;
   font-weight: 400;
   color: #ffffff;
+}
+.categorie{
+  display: flex;
+ flex-direction: column;
+ margin: 0 20px;
+}
+.categorieName{
+  display: flex;
+  justify-content: space-around;
+}
+.categorieName button{
+  width: 132px;
+  height: 39px;
+  outline: none;
+  color: white;
+  border-radius: 40px;
+  background:
+    linear-gradient(#02182B, #02182B) padding-box,
+    linear-gradient(
+      
+      #0197F6,
+      #02182B,
+      #d7263d
+    ) border-box;
+  border: 4px solid transparent;
 }
 
 .containerDetails{
